# souviens_toi

./: 0.9  README.md  pyproject.toml  souviens_config.json  souviens_toi.db
memex_next/: __init__.py  ai.py  config.py  db.py  main.py  models.py  ocr.py  pdf_analyzer.py  scrap.py  web_capture.py
memex_next/resources/: schema.sql
memex_next/services/: async_worker.py  clipboard.py  export.py  importer.py
memex_next/ui/: app.py  editor.py  options.py  search.py  tasks.py  widgets.py
scripts/: fix_encoding.py
tests/: test_web_capture.py
